--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <service android:name=".service.ChatReceiveService"
             android:exported="false"/>
         <activity
-            android:name=".screens.MainActivity"
+            android:name=".screens.login.LoginActivity"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screens.login.LoginActivity"></activity>
-
+        <activity android:name=".screens.main.MainActivity"></activity>
     </application>
 
 </manifest>
