--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <service android:name=".service.ChatReceiveService"
+        <service android:name=".service.ChatService"
             android:exported="false"/>
         <activity
             android:name=".screens.login.LoginActivity"
